content/gogs-deployment/gogs/04_route_gogs.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: workshop-gogs
    env: workshop
  name: gogs-route
spec:
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gogs
    weight: 100
  wildcardPolicy: None
...
